# MJH_User_Library

./: .gitignore  README.md  README_KOR.md  pyproject.toml
Macros/: BackUp_Environmental_Vars.ps1  Make_Pyenv_Custom_Version.ps1  activate_venv_win.ps1
docs/: mjh_math.md  print_format.md  system_utils.md
docs_kor/: mjh_math.md  print_format.md  system_utils.md
examples/: .gitignore  mjh_math_examples.ipynb  print_format_examples.ipynb  system_utils_examples.ipynb
examples_kor/: mjh_math_examples.ipynb  print_format_examples.ipynb  system_utils_examples.ipynb
src/user_library/: __init__.py
src/user_library/mjh_math/: __init__.py  basic_math.py  geometry.py
src/user_library/print_format/: __init__.py  format_floats.py
src/user_library/system_utils/: __init__.py  logger.py
